--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "element-ui": "^2.14.1",
     "prettier": "^1.12.1",
+    "qs": "^6.9.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
