--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 .DS_Store
 node_modules/
-package-lock.json
 /dist/
 npm-debug.log*
 yarn-debug.log*
@@ -13,3 +12,4 @@ yarn-error.log*
 *.ntvs*
 *.njsproj
 *.sln
+/package-lock.json
