播放器功能完成60%，完成页面的开发，目前实现点击音乐可播放

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": [["es2015",{ "modules": false }]],
+  "presets": [["stage-2"],["es2015",{ "modules": false }]],
   "plugins": [
     [
       "component",
@@ -7,6 +7,10 @@
         "libraryName": "element-ui",
         "styleLibraryName": "theme-chalk"
       }
+    ],
+    [
+      "transform-runtime",
+      "transform-object-rest-spread"
     ]
   ]
 }
